force-app/main/default/objects/FieloPLT__Rule__c/fields/FieloPLT__RewardDeliveryClass__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__RewardDeliveryClass__c</fullName>
    <label>Reward Delivery Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>RebateCap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>