force-app/main/default/objects/FieloPLT__Rule__c/fields/RebateConversionMode__c.field-meta.xml
<CustomField>
    <fullName>RebateConversionMode__c</fullName>
    <description>Rebate Conversion Mode</description>
    <label>Rebate Conversion Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Value</fullName>
            </value>
            <value>
                <fullName>Factor</fullName>
            </value>
            <value>
                <fullName>Multiplier</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>