force-app/main/default/objects/FieloPLT__Rule__c/fields/RebateFieldName__c.field-meta.xml
<CustomField>
    <fullName>RebateFieldName__c</fullName>
    <description>Rebate Field Name</description>
    <label>Rebate Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>